6 aug update rakesh file
