# routes/uomRoutes.js
@@ -1,14 +1,14 @@
 
 const express = require('express');
 const router = express.Router();
-// const itemController = require('../controllers/itemController');
 const uomController = require('../controllers/uomController');
+const setAuditFields = require('../middleware/setAuditFields.js');
 
 // API routes
 router
     .get('/uoms', uomController.getAllUom)
-    .post('/uom', uomController.createUom)
+    .post('/uom', setAuditFields, uomController.createUom)
     .get('/uom/:id', uomController.getUomById)
-    .delete('/uoms/:id', uomController.deleteUomById)
-
+    .delete('/delete', setAuditFields, uomController.deleteUomById)
+    .put('/update', setAuditFields, uomController.updateUomById)
 module.exports = router;
